--- a/editor/editor.html
+++ b/editor/editor.html
@@ -6,6 +6,10 @@
     <script src="editor.js"></script>
   </head>
   <body onresize="windowResized()">
+    <input type="image" height="16" width="16"
+	   src="icons/zoom_in.png" onclick="zoom(+1)">
+    <input type="image" height="16" width="16"
+	   src="icons/zoom_out.png" onclick="zoom(-1)">
     <button onclick="newCourse(event)">New</button>
     <button onclick="document.getElementById('fileInput').click();"
 	    value="/home/takashi/Downloads/sample.json">Load</button>
@@ -35,7 +39,7 @@
       Length: <input id="courseLength" type="number" min="10" max="1000" value="30">
       Vision: <input id="vision" type="number" min="5" max="1000" value="10">
       Time Limit: <input id="thinkTime" type="number" min="100"
-			 max="100000" value="2000">
+			 max="100000" value="20000">
       Step Limit: <input id="stepLimit" type="number" min="10"
 			 max="1000" value="50">
       <button onclick="sizeSet(event)">Set Size</button>
